[tool.poetry]
name = "boostdx"
version = "0.1.0"
description = "Poniendo en practica los conocimientos del libro Boost your Django DX"
authors = ["Maynor Pineda"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
ipython = "^8.3.0"

[tool.poetry.dev-dependencies]
pywatchman = "^1.4.1"
django-debug-toolbar = "^3.4.0"
django-browser-reload = "^1.3.0"
rich = "^12.3.0"

[tool.black]
target-version = ['py38']
line-lenth = 79

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
